--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "author": "Simon McManus",
   "license": "BSD-2-Clause",
   "devDependencies": {
-    "sinon": "~1.9.0",
+    "deepvalidate": "0.0.4",
     "mocha": "*",
     "should": "~3.2.0-beta1",
-    "deepvalidate": "0.0.4"
+    "sinon": "~1.9.0"
   }
 }
