--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": ""
   },
   "scripts": {
-    "test": "mocha -C"
+    "test": "mocha -C --reporter spec"
   },
   "author": "Simon McManus",
   "license": "BSD-2-Clause",
