--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "mocha": "*",
     "should": "~3.2.0-beta1",
     "sinon": "~1.9.0"
+  },
+  "dependencies": {
+    "express": "~4.8.3"
   }
 }
